--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,9 +1,13 @@
 = MotionBundler CHANGELOG
 
+== Version 0.1.4 (May 29, 2013)
+
+* Not using colorize as gem dependency anymore: defining String#yellow, String#green, String#red in MotionBundler itself
+* Fixed `duplicate symbol` error caused when requiring a file within `Dir["app/**/*.rb"]`
+
 == Version 0.1.3 (May 28, 2013)
 
 * Altered `simulator?` (and thus `device?`) determination (in simulator when ARGV is empty)
-* Fixed `duplicate symbol` error (caused when requiring a file within `Dir["app/**/*.rb"]`)
 
 == Version 0.1.2 (May 20, 2013)
 
